[package]
name = "hwc_latex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hwc_lang_cbml = { path = "../hwc_lang_cbml" }
hwc_lang_dollar = { path = "../hwc_lang_dollar" }
hwc_lang_equation = { path = "../hwc_lang_equation" }
json = "0.12.4"
